# production-mlops-url-pe-classification

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pe.yml  deploy-url.yml
app/common/: auth.py  guardrails.py  jobs.py  metrics.py  s3util.py
app/pe/: Dockerfile  main.py  model_adapter.py  requirements.txt
app/url/: Dockerfile  main.py  model_adapter.py
client/: scan_pe.py  scan_url.py  scanclient.py  test_urls.txt
docs/: architecture.md  dataflow.md  design.md
iam/: ecsTaskRole.policy.json  gha-deploy.policy.json  gha-deploy.trust.json
scripts/: push_base.sh  update_image.sh
terraform/: alb.tf  cloudwatch.tf  data.tf  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  secrets.tf  security_groups.tf  variables.tf
