[project]
name = "production-mlops-url-pe-classification"
version = "1.0.0"
description = "Production MLOps: dual-model ML serving on AWS ECS Fargate with FastAPI, ALB, and GitHub Actions CI/CD"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
line-length = 100
target-version = "py39"
